--- a/scripts/2_analysis_cory.Rmd
+++ b/scripts/2_analysis_cory.Rmd
@@ -37,114 +37,114 @@ In this section, we start by providing some descriptive statistics about the sam
 ```{r Descriptive statistics}
 
 # Here we gather descriptive statistics by sex
-surveyData %>%
-  group_by(ParticipantID, Sex, Age) %>%
-  summarise(n = n()) %>%
-  group_by(Sex) %>%
+surveyData |>
+  group_by(ParticipantID, Sex, Age) |>
+  summarise(n = n()) |>
+  group_by(Sex) |>
   summarise(meanAge = mean(as.numeric(Age), na.rm = T),
             sdAge = sd(as.numeric(Age), na.rm = T),
             n = n())
 
 # Some nationality data if needed
-surveyData %>%
-  group_by(Nationality) %>%
+surveyData |>
+  group_by(Nationality) |>
   summarise(n = n())
 
 # Group level statistics on the perceived importance of testing
-surveyData %>%
-  group_by(Timepoint, Condition) %>%
-  summarise(TestImportance = mean(TestImportance)) %>%
+surveyData |>
+  group_by(Timepoint, Condition) |>
+  summarise(TestImportance = mean(TestImportance)) |>
   arrange(Condition, desc(Timepoint))
 
-surveyData %>%
-  group_by(Condition, ParticipantID) %>%
-  tally() %>%
-  group_by(Condition) %>%
+surveyData |>
+  group_by(Condition, ParticipantID) |>
+  tally() |>
+  group_by(Condition) |>
   tally()
 
 # Group level statistics about the intention to get tested if the participant detects symptoms.
-chatbotData %>%
-  group_by(Condition, testingLikelihood) %>%
+chatbotData |>
+  group_by(Condition, testingLikelihood) |>
   summarise(n = n())
 ```
 
-```{r missing data analysis}
+```{r missing-data-analysis}
 dependentVar <- 
   "testingLikelihood"
 independentVar <-
   c("Condition", "Sex", "Age")
 
-chatbotData %>%
+chatbotData |>
   missing_pattern(dependentVar, independentVar)
 
 missPlotTestLikelihood <- 
-  chatbotData %>%
+  chatbotData |>
   missing_plot(dependentVar, independentVar)
 
-chatbotData %>%
+chatbotData |>
   missing_pairs(dependentVar, independentVar)
 
-chatbotData %>%
-  group_by(testingLikelihood) %>%
+chatbotData |>
+  group_by(testingLikelihood) |>
   mutate(testingLikelihood = ifelse(is.na(testingLikelihood), 
                                           "missing", 
-                                          "not missing")) %>%
+                                          "not missing")) |>
   summarise(meanAge = round(mean(Age, na.rm = T), 1))
 
-chatbotData %>%
-  group_by(testingLikelihood, Essential) %>%
+chatbotData |>
+  group_by(testingLikelihood, Essential) |>
   mutate(testingLikelihood = ifelse(is.na(testingLikelihood), 
                                           "missing", 
-                                          "not missing")) %>%
-  tally() %>%
+                                          "not missing")) |>
+  tally() |>
   filter(!is.na(Essential))
 
 #18/34*100 
 #9/24*100
 
-chatbotData %>%
-  group_by(testingLikelihood, Sex) %>%
+chatbotData |>
+  group_by(testingLikelihood, Sex) |>
   mutate(testingLikelihood = ifelse(is.na(testingLikelihood), 
                                           "missing", 
-                                          "not missing")) %>%
-  tally() %>%
+                                          "not missing")) |>
+  tally() |>
   filter(!is.na(Sex))
 
 # missing female 23, 11
 # non-missing female 17, 7
 
-surveyData %>% 
-  group_by(Timepoint, ParticipantID, Age, Sex) %>%
-  tally() %>%
-  group_by(ParticipantID, Age, Sex) %>%
-  tally() %>%
-  arrange(n, ParticipantID) %>%
-  group_by(n, Sex) %>%
-  filter(!is.na(Sex)) %>%
+surveyData |> 
+  group_by(Timepoint, ParticipantID, Age, Sex) |>
+  tally() |>
+  group_by(ParticipantID, Age, Sex) |>
+  tally() |>
+  arrange(n, ParticipantID) |>
+  group_by(n, Sex) |>
+  filter(!is.na(Sex)) |>
   tally()
 
 # 7/10 female for missing surveys
 # 32/45 female for non-missing surveys
 
 # Ages of groups with and without missing data in surveys
-surveyData %>% 
-  group_by(Timepoint, ParticipantID, Age) %>%
-  tally() %>%
-  group_by(ParticipantID, Age) %>%
-  tally() %>%
-  arrange(n, ParticipantID) %>%
-  group_by(n) %>%
-  filter(!is.na(Age)) %>%
+surveyData |> 
+  group_by(Timepoint, ParticipantID, Age) |>
+  tally() |>
+  group_by(ParticipantID, Age) |>
+  tally() |>
+  arrange(n, ParticipantID) |>
+  group_by(n) |>
+  filter(!is.na(Age)) |>
   summarise(meanAge = mean(Age))
 
-surveyData %>% 
-  group_by(Timepoint, ParticipantID, Essential) %>%
-  tally() %>%
-  group_by(ParticipantID, Essential) %>%
-  tally() %>%
-  arrange(n, ParticipantID) %>%
-  group_by(n, Essential) %>%
-  filter(!is.na(Essential)) %>%
+surveyData |> 
+  group_by(Timepoint, ParticipantID, Essential) |>
+  tally() |>
+  group_by(ParticipantID, Essential) |>
+  tally() |>
+  arrange(n, ParticipantID) |>
+  group_by(n, Essential) |>
+  filter(!is.na(Essential)) |>
   tally()
 
 ```
@@ -159,7 +159,7 @@ Here we analyse whether the behavioural interventions and the interaction with t
 
 # Ordering factor levels and scaling the age variable.
 chatbotData <-
-  chatbotData %>%
+  chatbotData |>
   mutate(
     testingLikelihood = factor(
       testingLikelihood,
@@ -206,7 +206,7 @@ clmTestingLikelihood <-
         Condition +
         Sex +
         Age,
-       data = chatbotData %>% 
+       data = chatbotData |> 
         filter(!is.na(testingLikelihood)),
       link = "logit")
 # Hessian singular -> collapse categories (done above).
@@ -280,14 +280,14 @@ Here we analyse whether the chatbot increases the perceived importance of testin
 
 # Testing importance of getting tested before and after Cory.
 testImportanceData <-
-  surveyData %>%
-  group_by(ParticipantID, Sex, Age, Timepoint, Condition) %>%
-  summarise(testImportance = mean(TestImportance)) %>%
+  surveyData |>
+  group_by(ParticipantID, Sex, Age, Timepoint, Condition) |>
+  summarise(testImportance = mean(TestImportance)) |>
   pivot_wider(
     id_cols = c("ParticipantID", "Sex", "Age", "Condition"),
     names_from = "Timepoint",
     values_from = "testImportance"
-  ) %>%
+  ) |>
   mutate(
     testImportanceDifference = `Post-Test` - `Pre-Test`,
     Condition = factor(
@@ -297,14 +297,14 @@ testImportanceData <-
                  "Compassion")
     ),
     Sex = factor(Sex)
-  ) %>%
+  ) |>
   filter(!is.na(testImportanceDifference),
          !is.na(Sex))
 
 contrasts(testImportanceData$Sex) <- contr.sum(2)
 
-testImportanceData %>%
-  group_by(Condition) %>%
+testImportanceData |>
+  group_by(Condition) |>
   summarise(mean = mean(testImportanceDifference),
             sd = sd(testImportanceDifference))
 
@@ -352,7 +352,7 @@ Here we analyse whether Cory influenced people's judgments of whether it is acce
 # Add absolute value for certainty about going out.
 
 surveyData <- 
-  surveyData %>%
+  surveyData |>
   mutate(AbsCertainty = abs(Attitude),
          scaledAge = scale(Age),
          Sex = factor(Sex),
@@ -376,7 +376,7 @@ ocmFullModelCertainty <-
       Age +
       Sex +
       (1 | ParticipantID),
-    surveyData %>%
+    surveyData |>
       filter(!is.na(Age))
   )
 
@@ -389,7 +389,7 @@ ocmReduced1Certainty <-
       Age +
       Sex +
       (1 | ParticipantID),
-    surveyData %>%
+    surveyData |>
       filter(!is.na(Age))
   )
 
@@ -399,7 +399,7 @@ ocmReduced2Certainty <-
         Age +
         Sex +
         (1 | ParticipantID),
-      surveyData %>%
+      surveyData |>
         filter(!is.na(Age)))
 
 ocmReduced3Certainty <-
@@ -408,7 +408,7 @@ ocmReduced3Certainty <-
         Age +
         Sex +
         (1 | ParticipantID),
-      surveyData %>%
+      surveyData |>
         filter(!is.na(Age)))
 
 # Likelihood ratio tests
@@ -432,9 +432,9 @@ lrtCertainty2 <-
 # Now we estimate models with different reference levels in order to do pairwise
 # comparisons.
 
-surveyData %>%
-  filter(!is.na(Age)) %>%
-  group_by(Timepoint) %>%
+surveyData |>
+  filter(!is.na(Age)) |>
+  group_by(Timepoint) |>
   summarise(mean = mean(AbsCertainty),
             sd = sd(AbsCertainty))
 
@@ -447,7 +447,7 @@ ocm1Certainty <-
         Age +
         Sex +
           (1|ParticipantID),
-         surveyData %>% 
+         surveyData |> 
         filter(!is.na(Age)))
 
 # Here the difference between pre-test and post-test in high risk scenarios is:
@@ -457,9 +457,9 @@ ocm1Certainty <-
 ciLowerTimepointHigh = 0.042846 - 0.128981 * 1.96
 ciUpperTimepointHigh = 0.042846 + 0.128981 * 1.96
 
-surveyData %>%
-  filter(!is.na(Age), Risk == "High") %>%
-  group_by(Timepoint) %>%
+surveyData |>
+  filter(!is.na(Age), Risk == "High") |>
+  group_by(Timepoint) |>
   summarise(mean = mean(AbsCertainty),
             sd = sd(AbsCertainty))
 
@@ -471,7 +471,7 @@ surveyData %>%
 
 # we do the same for low risk scenarios
 surveyData <-
-  surveyData %>%
+  surveyData |>
   mutate(Risk = factor(Risk, levels = c("Low", "High", "Minimal")))
 
 # Now we run the model with low risk as the reference level.
@@ -481,7 +481,7 @@ ocm2Certainty <-
         Age +
         Sex +
           (1|ParticipantID),
-         surveyData %>% 
+         surveyData |> 
         filter(!is.na(Age)))
 
 # Here the difference between pre-test and post-test in low risk scenarios is:
@@ -490,9 +490,9 @@ ocm2Certainty <-
 
 ciLowerTimepointLow = -0.832905 - 0.182084 * 1.96
 ciUpperTimepointLow = -0.832905 + 0.182084 * 1.96
-surveyData %>%
-  filter(!is.na(Age), Risk == "Low") %>%
-  group_by(Timepoint) %>%
+surveyData |>
+  filter(!is.na(Age), Risk == "Low") |>
+  group_by(Timepoint) |>
   summarise(mean = mean(AbsCertainty),
             sd = sd(AbsCertainty))
 
@@ -505,7 +505,7 @@ surveyData %>%
 # And now for minimal risk attitudes
 
 surveyData <-
-  surveyData %>%
+  surveyData |>
   mutate(Risk = factor(Risk, levels = c("Minimal", "Low", "High")))
 
 ocm3Certainty <- 
@@ -514,7 +514,7 @@ ocm3Certainty <-
         Age +
         Sex +
           (1|ParticipantID),
-         surveyData %>% 
+         surveyData |> 
         filter(!is.na(Age)))
 
 # Here the difference between pre-test and post-test in minimal risk scenarios is:
@@ -523,9 +523,9 @@ ocm3Certainty <-
 
 ciLowerTimepointMinimal = -1.206200 - 0.194421 * 1.96
 ciUpperTimepointMinimal = -1.206200 + 0.194421 * 1.96
-surveyData %>%
-  filter(!is.na(Age), Risk == "Minimal") %>%
-  group_by(Timepoint) %>%
+surveyData |>
+  filter(!is.na(Age), Risk == "Minimal") |>
+  group_by(Timepoint) |>
   summarise(mean = mean(AbsCertainty),
             sd = sd(AbsCertainty))
 
@@ -545,7 +545,7 @@ ocmMainTimepointCertainty <-
         Age +
         Sex +
           (1|ParticipantID),
-         surveyData %>% 
+         surveyData |> 
         filter(!is.na(Age)))
 # The main effect of timepoint is:
 #                          Estimate    StdErr t.value   p.value
@@ -553,9 +553,9 @@ ocmMainTimepointCertainty <-
 ciLowerTimepointMain = -0.665420 - 0.101618 * 1.96
 ciUpperTimepointMain = -0.665420 +  0.101618 * 1.96
 
-surveyData %>%
-  filter(!is.na(Age)) %>%
-  group_by(Timepoint) %>%
+surveyData |>
+  filter(!is.na(Age)) |>
+  group_by(Timepoint) |>
   summarise(mean = mean(AbsCertainty),
             sd = sd(AbsCertainty))
 
@@ -570,12 +570,7 @@ ocmMainRiskCertainty <-
         Age +
         Sex +
           (1|ParticipantID),
-         surveyData %>% 
+         surveyData |> 
         filter(!is.na(Age)))
 ```
 
-
-```{r save image}
-#save.image()
-
-```
